Class166-Kubernetes/k8s/service.yml
# This file is having a permanent IP and is responsible for
#  recieving the user request through ingress controller and ALB and forward it to pods  

# To take it to kubernetes cloud cmd: kubectl apply -f ./k8s/service.yml

kind: Service
apiVersion: v1
metadata:
  name:  main-server-service
spec:
  selector:
    app:  main-server
  type:  ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000
