Class166-Kubernetes/k8s/ingress.yml
# To install ingress controller we have give this command
# cmd: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.1/deploy/static/provider/cloud/deploy.yaml 
# after running this the ingress controller will be available in the kubernetes but it won't do any thing so if we want it to pass the user request to the service file

# then we've to give it a certain rule by ingress.yml (this file)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  
   - http:
      paths:
      - pathType: Prefix
        path: "/"     # it means if any traffic comes from "/" then forward it to this service (service name) and this port
        backend:
          service:
            name: main-server-service
            port: 
              number: 80

   - http:
      paths:
      - pathType: Prefix
        path: "/api/product"
        backend:
          service:
            name: product-service
            port:
              number: 80
